junit tags added for auto init of a driver